# pathview

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  editor.html  index.html  package-lock.json  package.json  paper.bib  paper.md  pyproject.toml  requirements.txt  svelte.config.js  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-deploy-docs.yml  ci.yml  deploy.yml  publish-pypi.yml  test.yml
app/: version.json
dev/: CNAME  editor.html  index.html  robots.txt  sitemap.xml
dev/app/: version.json
dev/examples/: bouncing-ball.json  cascade-subsystem.json  feedback-system.json  fmcw-radar.json  harmonic-oscillator.json  manifest.json  pid-subsystem.json  squarewave-lpf.json  thermostat.json  vanderpol.json
docs/: backend-protocol-spec.md  conf.py  contributing.rst  index.rst  installation.rst  roadmap.rst  support.rst  toolbox-spec.md  usage.rst
example_graphs/: bouncing_ball.json  festim_two_walls.json  fmcw_radar.json  harmonic_oscillator.json  linear_feedback.json  pendulum.json  pid.json  spectrum.json  stick_slip.json  thermostat.json  van_der_pol.json
examples/: bouncing-ball.json  cascade-subsystem.json
pathview/: __init__.py  app.py  cli.py  config.py  converter.py  worker.py
pathview/data/: registry.json
pathview_server/: __init__.py  __main__.py  app.py  cli.py  venv.py  worker.py
scripts/: build_package.py  capture-screenshots.js  check-generated.js  extract-blocks.py  extract-events.py  extract-simulation.py  extract.py  generate-examples-manifest.js  pathsim_extractor.py  pathview_install.py  pvm2py.py
scripts/config/: pyodide.json  requirements-build.txt  requirements-pyodide.txt
server/: app.py  worker.py
src/: App.jsx  app.css  app.html  backend.py  config.js  nodeConfig.js  utils.js
src/components/: ContextMenu.jsx  CustomEdge.jsx  EdgeDetails.jsx  EventsTab.jsx  GlobalVariablesTab.jsx  GraphView.jsx  LogDock.jsx  NodeSidebar.jsx  PythonCodeEditor.jsx  ResultsPanel.jsx  ShareModal.jsx  Sidebar.jsx  SolverPanel.jsx  TopBar.jsx
src/python/: __init__.py  convert_to_python.py  custom_pathsim_blocks.py  pathsim_utils.py
src/routes/: +layout.svelte  +layout.ts  +page.svelte  summary.md
src/styles/: App.css  PythonCodeEditor.css
src/utils/: urlSharing.js
static/: sitemap.xml
test/: test_backend.py  test_convert_python.py  test_custom_blocks.py  test_events.py  test_examples.py
tests/: conftest.py  test_app.py  test_worker.py
(+1406 files in other folders)
