[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm[toml] >= 7.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "pathview"
dynamic = ["version"]
description = "A Graphical User Interface for System Simulation"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "pathsim>=0.8.2,<0.14.0",
    "pathsim-chem<0.1.1",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "plotly>=6.0",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest"
]


[project.urls]
Homepage = "https://github.com/festim-dev/pathview"
Documentation = "https://pathview.readthedocs.io/"
Repository = "https://github.com/festim-dev/pathview.git"
Issues = "https://github.com/festim-dev/pathview/issues"

[tool.setuptools]
packages = ["pathview"]
package-dir = {"pathview" = "src/python"}

[tool.setuptools.package-data]
pathview = ["templates/*"]

[tool.setuptools_scm]
write_to = "src/python/_version.py"
