[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathview"
version = "0.5.0"
description = "Visual node editor for building and simulating dynamic systems with PathSim"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "numpy",
    "waitress>=3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://view.pathsim.org"
Repository = "https://github.com/pathsim/pathview"

[project.scripts]
pathview = "pathview_server.cli:main"

[tool.setuptools]
packages = ["pathview_server"]

[tool.setuptools.package-data]
pathview_server = ["static/**/*"]
